# markov_str

./: .gitignore  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  get_data.sh
examples/: main.rs
src/: chain.rs  lib.rs  main.rs  markov.rs
tests/: chain.rs  regex.rs
