[package]
name = "markov_str"
version = "0.1.0"
authors = ["brogolem35"]
edition = "2021"
description = "Markov Chain implementation optimized for text generation."
license = "MIT"
repository = "https://github.com/Brogolem35/markov_str"
keywords = ["markov", "markov-chain", "text-generation"]
categories = ["text-processing", "data-structures"]

[features]
serialize = ["serde", "serde_regex", "serde_json_any_key", "hashbrown/serde", "lasso/serialize"]

[dependencies]
hashbrown = "0.14.5"
lasso = {version = "0.7.3", features = ["ahasher", "inline-more"]}
rand = "0.8.5"
regex = "1.10.6"
serde = {version = "1.0.210",  features = ["derive"], optional = true}
serde_regex = {version = "1.1.0", optional = true}
serde_json_any_key = {version = "2.0.0", optional = true}

[dev-dependencies]
serde_json = "1.0.62"

[package.metadata.clippy]
# This sets all pedantic lints to be treated as errors
deny = ["clippy::pedantic"]
