[package]
name = "markov_str"
version = "0.2.0"
authors = ["brogolem35"]
edition = "2021"
description = "Markov Chain implementation optimized for text generation."
license = "MIT"
repository = "https://github.com/Brogolem35/markov_str"
keywords = ["markov", "markov-chain", "text-generation"]
categories = ["text-processing", "data-structures"]

[features]
serialize = ["serde", "serde_regex", "serde_json_any_key", "hashbrown/serde", "lasso/serialize", "smallvec/serde"]

[dependencies]
hashbrown = "0.15.0"
foldhash = "0.1.3"
lasso = {version = "0.7.3", features = ["ahasher", "inline-more"]}
rand = "0.8.5"
regex = "1.11.1"
serde = {version = "1.0.213",  features = ["derive"], optional = true}
serde_regex = {version = "1.1.0", optional = true}
serde_json_any_key = {version = "2.0.0", optional = true}
smallvec = "1.13.2"

[dev-dependencies]
serde_json = "1.0.132"

[package.metadata.clippy]
# This sets all pedantic lints to be treated as errors
deny = ["clippy::pedantic"]
