[package]
name = "markov_str"
version = "0.3.0"
authors = ["brogolem35"]
edition = "2021"
description = "Markov Chain implementation optimized for text generation."
license = "MIT"
repository = "https://github.com/Brogolem35/markov_str"
keywords = ["markov", "markov-chain", "text-generation"]
categories = ["text-processing", "data-structures"]

[features]
serialize = ["serde", "serde_json_any_key", "hashbrown/serde", "lasso/serialize", "smallvec/serde"]

[dependencies]
hashbrown = "0.15.*"
foldhash = "0.1.*"
lasso = {version = "0.7.*", features = ["ahasher", "inline-more"]}
rand = "0.8.*"
serde = {version = "1.0.*",  features = ["derive"], optional = true}
serde_json_any_key = {version = "2.0.0", optional = true}
smallvec = {version = "1.13.*", features = ["const_generics"]}

[dev-dependencies]
regex = "1.11.*"
serde_json = "1.0.*"

[package.metadata.clippy]
# This sets all pedantic lints to be treated as errors
deny = ["clippy::pedantic"]
